# IMTQE

./: .gitignore  README.md  architecture.md  architecture_req_v2.md  architecture_semantic_extension.md  architecture_v3_new.md  pyproject.toml  report.md  test_features.py
VKR/: TODO.txt  chapter1_data.docx  chapter2_features.docx  chapter3_models.docx  chapter4_span.docx  chapter5_interpretation.docx  chapters_3_4.docx  introduction.docx  plan.md  practice_report_imtqe.docx  research.md
data/feedback/: feedback.jsonl
data/processed/: wordlevel_features.parquet  wordlevel_train.parquet
etc/: test_examples.py
models/: semantic_pca.pkl  semantic_pca_meta.json  xgboost_sentence.model
scripts/: build_synthetic_negatives.py  build_wordlevel.py  calibrate_span_thresholds.py  dedup_mqm.py  extract_features.py  prepare_data.py  run_full_pipeline.py  train_neural_head.py  train_semantic_pca.py  train_sentence_model.py  train_span_model.py  tune_ensemble.py  warmup_inference_models.py
specs/: RUN_TRAINING_INFERENCE.md  architecture_v3.md  ui_spec.md
src/: bootstrap.py  cli.py  config.py  data_contract.py  determinism.py  logging_config.py  predict.py  settings.py
src/app/: api.py  feedback.py  models_state.py  server.py
src/features/: extractor.py  fluency.py  formatting.py  interactions.py  linguistic.py  neural.py  schema.py  semantic.py  structural.py
src/interpretation/: __init__.py  aggregation.py  explanation_loss.py  overall.py  (+1 more)
tests/: test_explanation_loss.py  test_predict.py  test_sentence_model.py  test_span_model.py  test_train_sentence_model.py
(+12 files in other folders)
