[tool.poetry]
name = "imtqe"
version = "0.1.0"
description = ""
authors = ["yurginapoet <yurginapoet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

pandas = "^2.2"
numpy = "^2.0"
scikit-learn = "^1.5"
xgboost = "^2.1"
shap = "^0.46"
pyarrow = "^17.0"
scipy = "^1.14"
joblib = "^1.4"

# NLP 
sentence-transformers = "^3.0"
transformers = "^4.45"
datasets = "^3.0"
pysbd = "^0.3"

fastapi = "^0.115"
uvicorn = { extras = ["standard"], version = "^0.31" }
gradio = "^5.0"

# Dev
black = "^24.8"
isort = "^5.13"
pytest = "^8.3"
torch = {version = "^2.11.0+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.26.0+cpu", source = "pytorch_cpu"}
torchaudio = {version = "^2.11.0+cpu", source = "pytorch_cpu"}
spacy = "^3.8.14"
pymorphy2 = "^0.9.1"
pymorphy3 = "^2.0.6"
pymorphy3-dicts-ru = "^2.4.417150.4580142"
ngboost = "^0.5.10"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
